Add text areas.

--- a/HF_LoRA_fine_tuning_with_Ray_Tuning.ipynb
+++ b/HF_LoRA_fine_tuning_with_Ray_Tuning.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "XMR2k4ZDkKzk"
       },
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "UJIQLG9kPuFy"
       },
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -584,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "2TijyNSWk9es"
       },
@@ -599,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -628,7 +628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -657,7 +657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "pG47ZwcqLx7C"
       },
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -733,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "F8tJVbnelVhf"
       },
@@ -838,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "2flF_EgtywMc"
       },
@@ -870,7 +870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "fRDEA8kFdts6"
       },
@@ -921,7 +921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5938,7 +5938,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "oRs3xvrnd2Sl",
         "colab": {
@@ -6369,7 +6369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "ah2qNucFeB3t",
         "colab": {
@@ -6418,7 +6418,7 @@
       "metadata": {
         "id": "3dKFVfCyurg4"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6436,7 +6436,7 @@
       "metadata": {
         "id": "OEoe7BfTrk-Q"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6467,7 +6467,7 @@
         "id": "HhqKO78pvfBz",
         "outputId": "d097301e-bc58-4b52-a0ff-3a3c9fa94bef"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6480,6 +6480,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Fine tune the model\n",
+        "\n",
+        "Now, we will fine tune the LLM with optimal hyper parameters."
+      ],
+      "metadata": {
+        "id": "uFS_ZcfEizZG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from transformers import EarlyStoppingCallback"
@@ -6487,7 +6498,7 @@
       "metadata": {
         "id": "DshIPT6hwlCd"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6504,7 +6515,7 @@
       "metadata": {
         "id": "dhiQSQOQwJ-d"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6529,7 +6540,7 @@
         "id": "RkzmojJBwJ8I",
         "outputId": "2704fe6b-8627-4cd3-b489-a8ade67e9566"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6753,7 +6764,7 @@
         "id": "45vyZRs7wJ24",
         "outputId": "a8733b23-55d2-40b7-c483-ad9f772726de"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6795,11 +6806,15 @@
       "metadata": {
         "id": "2-7gDSzGy_of"
       },
-      "source": []
+      "source": [
+        "# Inference Time!\n",
+        "\n",
+        "Let's do the inference for one data and also see the performance with confusion matrix."
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "XG9Yeq9Ce3Q4",
         "colab": {
@@ -6855,7 +6870,7 @@
         "id": "X5zWohO63XpN",
         "outputId": "42837f9e-cacc-495f-9d39-d9cb324509ee"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6871,7 +6886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "VFzFF8VyfXJt",
         "colab": {
@@ -6923,7 +6938,7 @@
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyMr+BqAZSSCWU21//3/7iqQ",
+      "authorship_tag": "ABX9TyMZqyjjMo329E7rGkcr916D",
       "include_colab_link": true
     },
     "kernelspec": {
